# mlflow-rust-server

./: .dockerignore  .env_dev  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  generate_data.py
src/: cli.rs  config.rs  entities.rs  env.rs  lib.rs  main.rs  utils.rs
src/handlers/: experiments.rs  mod.rs  runs.rs
src/parser/: common.rs  filter.rs  mod.rs  order_by.rs
src/stores/tracking/: error.rs  mod.rs  postgres.rs  sqlite.rs
ui/: package.json
ui/src/: App.tsx  ExperimentPage.tsx  ExperimentTable.tsx  RunPage.tsx  api.ts  validation.ts
