[package]
name = "mlflow-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix-web:
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "sqlite" ] }
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
regex = "1"
async-trait = "0.1"
clap = { version = "3.2", features = ["derive"] }
url = "2.2"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
dotenv = "0.15"
nom = "7.1.1"
